summative.moria.Moria.scala.error
Erreur de compilation :
Moria:3: error: not found: value Direction
  {if (getDirection()!=Direction.EAST){
                       ^